<resources>
    <string name="app_name">HomeWorkAndroid2</string>
    <string name="date">Дата:</string>
    <string name="date_of_create">Дата создания:</string>
    <string name="edit_menu">Edit</string>
    <string name="priority">Приоритет</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="save">SAVE</string>
    <string name="menu_add">Добавить</string>
    <string name="menu_clean">Очистить</string>
    <string name="menu_update">Изменить</string>
    <string name="action_delete">Удалить</string>
    <string name="action_refresh">обновить</string>
    <string name="action_cancel">Отмена</string>
    <string name="element_deleted">Элемент удален</string>
    <string name="deletenig_canceled">Удаление отменено</string>
    <string name="are_you_sure">Точно удалить?</string>
</resources>